<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_cadastrar">Cadastrar</string>

    <!-- Tela Login-->
    <string name="title_login">Login</string>
    <string name="btn_register">Cadastrar</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Senha</string>
    <string name="lbl_forgot_password">Esqueceu a senha?</string>
    <string name="lbl_register">Não está cadastrado?</string>
    <string name="btn_login">Entrar</string>
    <string name="title_activity_dialog_fragment">DialogFragmentActivity</string>
    <string name="email_required">Email Obrigatório</string>
    <string name="password_required">Senha Obrigatório</string>
    <string name="email_required_size_invalid">Seu email deve ter entre 4 e 15 caracteres!</string>
    <string name="password_required_size_invalid">Sua senha deve ter entre 6 e 15 caracteres!</string>

    <!-- Valores de Dados Compartilhados -->
    <string name="SharedPreferences">SharedPreferences</string>
    <string name="login">login</string>
    <string name="senha">senha</string>
    <string name="title_activity_logindemo">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_cadastrar_autenticacao">CadastrarAutenticacao</string>
    <string name="btn_save">Salvar</string>
    <string name="lbl_cancel">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
