<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        tools:context="clientefeedback.aplicacaocliente.Login.LoginActivity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/AppTheme.NoActionBar"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
    android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_login"
            android:id="@+id/lblLogin"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textIsSelectable="true"
            android:textSize="50dp"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorPrimaryDark" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarLogin"
        android:layout_gravity="center_horizontal" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbl_email"
            android:id="@+id/textEmail"
            android:layout_above="@+id/editPassword"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:editable="false"
        android:textSize="20dp"
        android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbl_password"
            android:id="@+id/textPassword"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/editEmail"
            android:layout_alignLeft="@+id/textEmail"
            android:layout_alignStart="@+id/textEmail"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPassword"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_register"
            android:id="@+id/textNaoCadastrado"
            android:layout_above="@+id/buttonLoginEntrar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_forgot_password"
            android:id="@+id/textEsqueceuSenha"
            android:layout_above="@+id/textNaoCadastrado"
            android:layout_alignLeft="@+id/textNaoCadastrado"
            android:layout_alignStart="@+id/textNaoCadastrado"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contextClickable="false" />

        <Button
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:id="@+id/buttonLoginEntrar"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:textSize="20dp" />

</LinearLayout>


